--- a/index.html
+++ b/index.html
@@ -277,4 +277,53 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js.js"></script>
 </body>
+
 </html>
+<!-- ... código anterior ... -->
+
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <div class="hero-content" data-aos="fade-up">
+      <h1>Domina la Calle con Estilo</h1>
+      <p>Motos de alta cilindrada, potencia, elegancia y control.</p>
+      <div class="hero-btns">
+        <a href="#models" class="cta-btn">Ver Modelos</a>
+        <a href="#test-drive" class="cta-btn secondary">Prueba de Manejo</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Banner de Promoción -->
+  <section class="promo-banner">
+    <div class="promo-content">
+      <h3>¡Tu primera compra con 15% de descuento!</h3>
+      <p id="countdown">Faltan 87 días</p>
+      <button class="cta-btn secondary">Ver Oferta</button>
+    </div>
+  </section>
+
+  <!-- Quiénes Somos -->
+  <section id="about" class="about">
+    <div class="about-content">
+      <h2>Quiénes Somos</h2>
+      <p>En VELOCITY MOTOX, nos apasiona la velocidad, la precisión y la elegancia de las motocicletas de alta cilindrada. Con más de 10 años de experiencia en el mercado, ofrecemos productos premium con un servicio excepcional.</p>
+    </div>
+  </section>
+
+  <!-- Misión -->
+  <section id="mission" class="mission">
+    <div class="mission-content">
+      <h2>Nuestra Misión</h2>
+      <p>Ofrecer a nuestros clientes motos de alta cilindrada con la mejor calidad, tecnología y diseño, acompañadas de un servicio personalizado y una experiencia de compra inolvidable.</p>
+    </div>
+  </section>
+
+  <!-- Visión -->
+  <section id="vision" class="vision">
+    <div class="vision-content">
+      <h2>Nuestra Visión</h2>
+      <p>Ser reconocidos como la marca líder en motos premium, expandiendo nuestra presencia global y promoviendo la cultura de la velocidad y la aventura.</p>
+    </div>
+  </section>
+
+<!-- ... resto del código ... -->
