--- a/index.html
+++ b/index.html
@@ -279,3 +279,61 @@
 </body>
 
 </html>
+
+  <!-- Banner de Promoción -->
+  <section class="promo-banner">
+    <div class="promo-content">
+      <div class="promo-text">
+        <h3>🎁 ¡Tu primera compra con 15% de descuento!</h3>
+        <p id="countdown">Faltan 87 días</p>
+      </div>
+      <button class="cta-btn secondary">Ver Oferta</button>
+    </div>
+  </section>
+
+  <!-- Quiénes Somos -->
+  <section id="about" class="about">
+    <div class="container">
+      <div class="about-content">
+        <h2>Quiénes Somos</h2>
+        <p>En VELOCITY MOTOX, nos apasiona la velocidad, la precisión y la elegancia de las motocicletas de alta cilindrada. Con más de 10 años de experiencia en el mercado, ofrecemos productos premium con un servicio excepcional.</p>
+        <div class="about-stats">
+          <div class="stat">
+            <i class="fas fa-motorcycle"></i>
+            <h3>10+</h3>
+            <p>Años de experiencia</p>
+          </div>
+          <div class="stat">
+            <i class="fas fa-users"></i>
+            <h3>5000+</h3>
+            <p>Clientes satisfechos</p>
+          </div>
+          <div class="stat">
+            <i class="fas fa-trophy"></i>
+            <h3>50+</h3>
+            <p>Modelos exclusivos</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Misión -->
+  <section id="mission" class="mission">
+    <div class="container">
+      <div class="mission-content">
+        <h2><i class="fas fa-bullseye"></i> Nuestra Misión</h2>
+        <p>Ofrecer a nuestros clientes motos de alta cilindrada con la mejor calidad, tecnología y diseño, acompañadas de un servicio personalizado y una experiencia de compra inolvidable.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Visión -->
+  <section id="vision" class="vision">
+    <div class="container">
+      <div class="vision-content">
+        <h2><i class="fas fa-eye"></i> Nuestra Visión</h2>
+        <p>Ser reconocidos como la marca líder en motos premium, expandiendo nuestra presencia global y promoviendo la cultura de la velocidad y la aventura.</p>
+      </div>
+    </div>
+  </section>
