--- a/index.html
+++ b/index.html
@@ -67,6 +67,35 @@
     </div>
   </section>
 
+    <!-- Características -->
+  <section id="features" class="features">
+    <div class="container">
+      <h2>¿Por qué elegirnos?</h2>
+      <div class="features-grid">
+        <div class="feature">
+          <i class="fas fa-shield-alt"></i>
+          <h3>Garantía Premium</h3>
+          <p>2 años de garantía en todas nuestras motos.</p>
+        </div>
+        <div class="feature">
+          <i class="fas fa-headset"></i>
+          <h3>Soporte 24/7</h3>
+          <p>Asistencia técnica y atención al cliente las 24 horas.</p>
+        </div>
+        <div class="feature">
+          <i class="fas fa-shipping-fast"></i>
+          <h3>Entrega Rápida</h3>
+          <p>Envío en menos de 7 días hábiles.</p>
+        </div>
+        <div class="feature">
+          <i class="fas fa-tools"></i>
+          <h3>Servicio Técnico</h3>
+          <p>Mantenimiento y reparación certificada.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Models Section -->
   <section id="models" class="models">
     <h2 data-aos="fade-up">Nuestros Modelos Premium</h2>
@@ -258,42 +287,7 @@
     <i class="fas fa-comments"></i>
   </button>
 
-  <footer>
-    <div class="footer-content">
-      <div class="footer-section">
-        <h4>VELOCITY MOTOX</h4>
-        <p>La mejor experiencia en motos de alta cilindrada.</p>
-      </div>
-      <div class="footer-section">
-        <h4>Links Rápidos</h4>
-        <ul>
-          <li><a href="#models">Modelos</a></li>
-          <li><a href="#finance">Financiamiento</a></li>
-          <li><a href="#test-drive">Prueba de Manejo</a></li>
-          <li><a href="#blog">Blog</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h4>Legal</h4>
-        <ul>
-          <li><a href="#">Términos y Condiciones</a></li>
-          <li><a href="#">Política de Privacidad</a></li>
-          <li><a href="#">Garantía</a></li>
-        </ul>
-      </div>
-    </div>
-    <p>&copy; 2025 VELOCITY MOTOX. Todos los derechos reservados.</p>
-  </footer>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="js.js"></script>
-</body>
-
-</html>
-
-
-
-  <!-- Quiénes Somos -->
+ <!-- Quiénes Somos -->
   <section id="about" class="about">
     <div class="container">
       <div class="about-content">
@@ -340,3 +334,75 @@
     </div>
   </section>
 
+  <!-- Galería de Clientes -->
+  <section id="gallery-clients" class="gallery-clients">
+    <div class="container">
+      <h2>Fotos de Nuestros Clientes</h2>
+      <div class="client-photos">
+        <img src="https://via.placeholder.com/300x200" alt="Cliente 1">
+        <img src="https://via.placeholder.com/300x200" alt="Cliente 2">
+        <img src="https://via.placeholder.com/300x200" alt="Cliente 3">
+        <img src="https://via.placeholder.com/300x200" alt="Cliente 4">
+        <img src="https://via.placeholder.com/300x200" alt="Cliente 5">
+        <img src="https://via.placeholder.com/300x200" alt="Cliente 6">
+      </div>
+    </div>
+  </section>
+
+  <!-- Preguntas Frecuentes -->
+  <section id="faq" class="faq">
+    <div class="container">
+      <h2>Preguntas Frecuentes</h2>
+      <div class="faq-item">
+        <h3>¿Ofrecen financiamiento?</h3>
+        <p>Sí, ofrecemos planes de financiamiento flexibles con tasas competitivas.</p>
+      </div>
+      <div class="faq-item">
+        <h3>¿Cuál es la garantía?</h3>
+        <p>Todas nuestras motos incluyen 2 años de garantía.</p>
+      </div>
+      <div class="faq-item">
+        <h3>¿Hacen envíos internacionales?</h3>
+        <p>Sí, hacemos envíos a varios países. Consulta disponibilidad.</p>
+      </div>
+    </div>
+  </section>
+  
+  <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h4>VELOCITY MOTOX</h4>
+        <p>La mejor experiencia en motos de alta cilindrada.</p>
+      </div>
+      <div class="footer-section">
+        <h4>Links Rápidos</h4>
+        <ul>
+          <li><a href="#models">Modelos</a></li>
+          <li><a href="#finance">Financiamiento</a></li>
+          <li><a href="#test-drive">Prueba de Manejo</a></li>
+          <li><a href="#blog">Blog</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="#">Términos y Condiciones</a></li>
+          <li><a href="#">Política de Privacidad</a></li>
+          <li><a href="#">Garantía</a></li>
+        </ul>
+      </div>
+    </div>
+    <p>&copy; 2025 VELOCITY MOTOX. Todos los derechos reservados.</p>
+    
+  </footer>
+  
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="js.js"></script>
+</body>
+
+</html>
+
+
+
+ 
