--- a/index.html
+++ b/index.html
@@ -353,6 +353,56 @@
       </div>
     </div>
   </section>
+
+    <!-- Contador de Clientes -->
+  <section class="counter">
+    <div class="container">
+      <div class="counter-item">
+        <h3 id="counter1">0</h3>
+        <p>Clientes Satisfechos</p>
+      </div>
+      <div class="counter-item">
+        <h3 id="counter2">0</h3>
+        <p>Motos Vendidas</p>
+      </div>
+      <div class="counter-item">
+        <h3 id="counter3">0</h3>
+        <p>Países</p>
+      </div>
+    </div>
+  </section>
+
+
+   <!-- Contacto Mejorado -->
+  <section id="contact-enhanced" class="contact-enhanced">
+    <div class="container">
+      <h2>Contáctanos</h2>
+      <div class="contact-enhanced-content">
+        <div class="contact-form">
+          <form id="contactForm">
+            <input type="text" placeholder="Nombre" required>
+            <input type="email" placeholder="Email" required>
+            <input type="tel" placeholder="Teléfono">
+            <textarea placeholder="Mensaje" rows="5" required></textarea>
+            <button type="submit">Enviar Mensaje</button>
+          </form>
+        </div>
+        <div class="contact-info-enhanced">
+          <h3>Información de Contacto</h3>
+          <p><i class="fas fa-map-marker-alt"></i> Calle Moto 123, Ciudad</p>
+          <p><i class="fas fa-phone"></i> +1 (800) VELOCITY</p>
+          <p><i class="fas fa-envelope"></i> ventas@velocitymotors.com</p>
+          <div class="social-share">
+            <h4>Comparte en redes:</h4>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
   <footer>
     <div class="footer-content">
@@ -391,5 +441,6 @@
 
 
  
+
 
 
