--- a/index.html
+++ b/index.html
@@ -385,6 +385,21 @@
       </div>
     </div>
   </section>
+
+    <!-- Ventana emergente del carrito -->
+  <div class="cart-modal" id="cartModal">
+    <div class="cart-header">
+      <h3>Tu Carrito</h3>
+      <span class="close-cart" id="closeCart">×</span>
+    </div>
+    <div class="cart-items" id="cartItems">
+      <!-- Aquí se agregarán los productos -->
+    </div>
+    <div class="cart-footer">
+      <p>Total: <span id="cartTotal">$0</span></p>
+      <button class="cta-btn">Finalizar Compra</button>
+    </div>
+  </div>
   
   <footer>
     <div class="footer-content">
@@ -423,6 +438,7 @@
 
 
  
+
 
 
 
