--- a/index.html
+++ b/index.html
@@ -400,6 +400,32 @@
       <button class="cta-btn">Finalizar Compra</button>
     </div>
   </div>
+
+  
+  <!-- Modal de Checkout -->
+  <div class="checkout-modal" id="checkoutModal">
+    <div class="checkout-content">
+      <div class="checkout-header">
+        <h3>Finalizar Compra</h3>
+        <span class="close-checkout" id="closeCheckout">×</span>
+      </div>
+      <form id="checkoutForm">
+        <h4>Datos Personales</h4>
+        <input type="text" placeholder="Nombre completo" required>
+        <input type="email" placeholder="Email" required>
+        <input type="tel" placeholder="Teléfono">
+        <textarea placeholder="Dirección completa" rows="3" required></textarea>
+
+        <h4>Datos de Pago</h4>
+        <input type="text" placeholder="Número de tarjeta" maxlength="16" required>
+        <div class="card-details">
+          <input type="text" placeholder="MM/AA" maxlength="5" required>
+          <input type="text" placeholder="CVV" maxlength="3" required>
+        </div>
+        <button type="submit">Comprar Ahora</button>
+      </form>
+    </div>
+  </div>
   
   
   <footer>
@@ -439,6 +465,7 @@
 
 
  
+
 
 
 
