--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         </ul>
       </div>
     </div>
-    <p>&copy; 2025 VELOCITY MOTOX. Todos los derechos reservados.</p>
+    <p>&copy; 2025 VELOCITY MOTOX. Todos los derechos reservados por isabella niño y steven patiño.</p>
     
   </footer>
   
@@ -475,6 +475,7 @@
 
 
  
+
 
 
 
